<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_toolbar_search"
        android:title="@string/toolbar_search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_cache"
        android:icon="@drawable/ic_toolbar_local"
        android:title="@string/toolbar_cache_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_toolbar_filter"
        android:title="@string/toolbar_filter_title"
        app:showAsAction="always" />
</menu>